--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ html, body {
 .swiper-slide img {
   width: 100%;
   height: 100%;
-  object-fit: scale-down;
+  object-fit: contain;
   background-color: #ffffff;
 }
 
